--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,23 +67,35 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+    implementation "androidx.navigation:navigation-compose:2.5.0-rc02"
+
 
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("io.ktor:ktor-client-core:$ktorVersion")
+    implementation("io.ktor:ktor-client-okhttp:$ktorVersion")
+    implementation "io.ktor:ktor-client-logging:$ktorVersion"
+    implementation 'org.slf4j:slf4j-simple:1.7.26'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation("io.ktor:ktor-client-content-negotiation:$ktorVersion")
+    implementation("io.ktor:ktor-serialization-kotlinx-json:$ktorVersion")
 
     //GSON
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation("io.ktor:ktor-serialization-gson:$ktorVersion")
+
     implementation 'androidx.hilt:hilt-navigation-compose:+'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
 
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.29.1-alpha"
 }
